// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`treeMapGenerator create Treemap nodes create map with fixed root children which include dynamic folders on the one hand and fixed ones at the other 1`] = `
[
  {
    "attributes": {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": 0,
    "incomingEdgePoint": Vector3 {
      "x": -200,
      "y": 2,
      "z": -225,
    },
    "isLeaf": false,
    "length": 939.9272667157608,
    "link": undefined,
    "markingColor": undefined,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": -200,
      "y": 2,
      "z": -175,
    },
    "path": "/root",
    "visible": true,
    "width": 939.9272667157608,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
  {
    "attributes": {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 234.06254235861678,
      "y": 2,
      "z": -101.9614554922677,
    },
    "isLeaf": false,
    "length": 516.9599966936684,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "src",
    "outgoingEdgePoint": Vector3 {
      "x": 234.06254235861678,
      "y": 2,
      "z": 156.51854285456645,
    },
    "path": "/root/src",
    "visible": true,
    "width": 328.9745433505162,
    "x0": 319.57527068335867,
    "y0": 18.798545334315214,
    "z0": 0,
  },
  {
    "attributes": {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 210.80902643455306,
      "y": 4,
      "z": -137.14103478133183,
    },
    "isLeaf": false,
    "length": 358.99031576024976,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "main",
    "outgoingEdgePoint": Vector3 {
      "x": 210.80902643455306,
      "y": 4,
      "z": 42.35412309879305,
    },
    "path": "/root/src/main",
    "visible": true,
    "width": 276.78921219348877,
    "x0": 322.4144203378087,
    "y0": 23.111386278605753,
    "z0": 2,
  },
  {
    "attributes": {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 141.61172338618087,
      "y": 4,
      "z": 211.08654250556484,
    },
    "isLeaf": false,
    "length": 140.71831715625643,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "test",
    "outgoingEdgePoint": Vector3 {
      "x": 280.00632948292525,
      "y": 4,
      "z": 211.08654250556484,
    },
    "path": "/root/src/test",
    "visible": true,
    "width": 276.78921219348877,
    "x0": 322.4144203378087,
    "y0": 390.7273839274366,
    "z0": 2,
  },
  {
    "attributes": {
      "rloc": 80,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 132.85975865439016,
      "y": 504,
      "z": -137.14103478133183,
    },
    "isLeaf": true,
    "length": 172.90190446335518,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "file1.java",
    "outgoingEdgePoint": Vector3 {
      "x": 249.41008668631284,
      "y": 504,
      "z": -137.14103478133183,
    },
    "path": "/root/src/main/file1.java",
    "visible": true,
    "width": 233.10065606384535,
    "x0": 324.5845946384288,
    "y0": 26.4080129869906,
    "z0": 4,
  },
  {
    "attributes": {
      "rloc": 80,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 132.85975865439016,
      "y": 504,
      "z": 42.354123098793096,
    },
    "isLeaf": true,
    "length": 172.90190446335518,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "file2.java",
    "outgoingEdgePoint": Vector3 {
      "x": 249.41008668631284,
      "y": 504,
      "z": 42.354123098793096,
    },
    "path": "/root/src/main/file2.java",
    "visible": true,
    "width": 233.10065606384535,
    "x0": 324.5845946384288,
    "y0": 205.9031708671155,
    "z0": 4,
  },
  {
    "attributes": {
      "rloc": 65,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 132.67326346497234,
      "y": 504,
      "z": 211.08654250556486,
    },
    "isLeaf": true,
    "length": 134.88052382364606,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "otherFile.java",
    "outgoingEdgePoint": Vector3 {
      "x": 249.34792162317356,
      "y": 504,
      "z": 211.08654250556486,
    },
    "path": "/root/src/test/otherFile.java",
    "visible": true,
    "width": 233.34931631640245,
    "x0": 324.3359343858717,
    "y0": 393.64628059374184,
    "z0": 4,
  },
  {
    "attributes": {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 55.47636168262221,
      "y": 2,
      "z": 454.94545003682055,
    },
    "isLeaf": false,
    "length": 281.9781800147283,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "resources",
    "outgoingEdgePoint": Vector3 {
      "x": 290.4581783615624,
      "y": 2,
      "z": 454.94545003682055,
    },
    "path": "/root/resources",
    "visible": true,
    "width": 469.9636333578803,
    "x0": 187.98545334315213,
    "y0": 563.9563600294564,
    "z0": 0,
  },
  {
    "attributes": {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -29.117092321796235,
      "y": 2,
      "z": 347.7937416312238,
    },
    "isLeaf": false,
    "length": 56.39563600294571,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "textFiles",
    "outgoingEdgePoint": Vector3 {
      "x": 17.879271013991797,
      "y": 2,
      "z": 347.7937416312238,
    },
    "path": "/root/resources/textFiles",
    "visible": true,
    "width": 93.99272667157607,
    "x0": 197.38472601030975,
    "y0": 569.5959236297509,
    "z0": 0,
  },
  {
    "attributes": {
      "rloc": 5,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -31.795885031936173,
      "y": 502,
      "z": 347.7937416312238,
    },
    "isLeaf": true,
    "length": 55.04214073887499,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "file.txt",
    "outgoingEdgePoint": Vector3 {
      "x": 7.587067443454181,
      "y": 502,
      "z": 347.7937416312238,
    },
    "path": "/root/resources/textFiles/file.txt",
    "visible": true,
    "width": 78.76590495078071,
    "x0": 198.51263873036865,
    "y0": 570.2726712617863,
    "z0": 2,
  },
  {
    "attributes": {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 238.76217869219556,
      "y": 2,
      "z": 528.2597768406499,
    },
    "isLeaf": false,
    "length": 135.34952640706956,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "tables",
    "outgoingEdgePoint": Vector3 {
      "x": 351.5534506980868,
      "y": 2,
      "z": 528.2597768406499,
    },
    "path": "/root/resources/tables",
    "visible": true,
    "width": 225.58254401178255,
    "x0": 432.3665426892499,
    "y0": 710.5850136371151,
    "z0": 0,
  },
  {
    "attributes": {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 206.4416911864197,
      "y": 502,
      "z": 474.3767739480249,
    },
    "isLeaf": true,
    "length": 53.11257988201646,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table1.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 206.4416911864197,
      "y": 502,
      "z": 500.9330638890331,
    },
    "path": "/root/resources/tables/table1.xlsx",
    "visible": true,
    "width": 46.43824585965376,
    "x0": 433.2225682565928,
    "y0": 711.0986289775208,
    "z0": 2,
  },
  {
    "attributes": {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 254.59198818075922,
      "y": 502,
      "z": 474.3767739480249,
    },
    "isLeaf": true,
    "length": 53.11257988201646,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table2.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 254.59198818075922,
      "y": 502,
      "z": 500.9330638890331,
    },
    "path": "/root/resources/tables/table2.xlsx",
    "visible": true,
    "width": 46.43824585965382,
    "x0": 481.3728652509323,
    "y0": 711.0986289775208,
    "z0": 2,
  },
  {
    "attributes": {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 302.7422851750987,
      "y": 502,
      "z": 474.3767739480249,
    },
    "isLeaf": true,
    "length": 53.11257988201646,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table3.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 302.7422851750987,
      "y": 502,
      "z": 500.9330638890331,
    },
    "path": "/root/resources/tables/table3.xlsx",
    "visible": true,
    "width": 46.43824585965376,
    "x0": 529.5231622452718,
    "y0": 711.0986289775208,
    "z0": 2,
  },
  {
    "attributes": {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 350.89258216943836,
      "y": 502,
      "z": 474.3767739480249,
    },
    "isLeaf": true,
    "length": 53.11257988201646,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table4.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 350.89258216943836,
      "y": 502,
      "z": 500.9330638890331,
    },
    "path": "/root/resources/tables/table4.xlsx",
    "visible": true,
    "width": 46.43824585965376,
    "x0": 577.6734592396115,
    "y0": 711.0986289775208,
    "z0": 2,
  },
  {
    "attributes": {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 206.86970397009114,
      "y": 502,
      "z": 528.2597768406499,
    },
    "isLeaf": true,
    "length": 26.042674600602368,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table5.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 254.1639753970878,
      "y": 502,
      "z": 528.2597768406499,
    },
    "path": "/root/resources/tables/table5.xlsx",
    "visible": true,
    "width": 94.58854285399332,
    "x0": 433.2225682565928,
    "y0": 765.2384395403487,
    "z0": 2,
  },
  {
    "attributes": {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 206.86970397009114,
      "y": 502,
      "z": 555.3296821220638,
    },
    "isLeaf": true,
    "length": 26.042674600602368,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table6.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 254.1639753970878,
      "y": 502,
      "z": 555.3296821220638,
    },
    "path": "/root/resources/tables/table6.xlsx",
    "visible": true,
    "width": 94.58854285399332,
    "x0": 433.2225682565928,
    "y0": 792.3083448217626,
    "z0": 2,
  },
  {
    "attributes": {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 206.86970397009114,
      "y": 502,
      "z": 582.3995874034777,
    },
    "isLeaf": true,
    "length": 26.04267460060248,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table7.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 254.1639753970878,
      "y": 502,
      "z": 582.3995874034777,
    },
    "path": "/root/resources/tables/table7.xlsx",
    "visible": true,
    "width": 94.58854285399332,
    "x0": 433.2225682565928,
    "y0": 819.3782501031765,
    "z0": 2,
  },
  {
    "attributes": {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 302.7422851750987,
      "y": 502,
      "z": 528.5165845108528,
    },
    "isLeaf": true,
    "length": 53.112579882016234,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table8.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 302.7422851750987,
      "y": 502,
      "z": 555.0728744518609,
    },
    "path": "/root/resources/tables/table8.xlsx",
    "visible": true,
    "width": 46.43824585965376,
    "x0": 529.5231622452718,
    "y0": 765.2384395403487,
    "z0": 2,
  },
  {
    "attributes": {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 350.8925821694383,
      "y": 502,
      "z": 528.5165845108528,
    },
    "isLeaf": true,
    "length": 53.112579882016234,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table9.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 350.8925821694383,
      "y": 502,
      "z": 555.0728744518609,
    },
    "path": "/root/resources/tables/table9.xlsx",
    "visible": true,
    "width": 46.438245859653875,
    "x0": 577.6734592396114,
    "y0": 765.2384395403487,
    "z0": 2,
  },
  {
    "attributes": {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 303.17029795877016,
      "y": 502,
      "z": 582.3995874034777,
    },
    "isLeaf": true,
    "length": 26.04267460060248,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "table10.xlsx",
    "outgoingEdgePoint": Vector3 {
      "x": 350.4645693857669,
      "y": 502,
      "z": 582.3995874034777,
    },
    "path": "/root/resources/tables/table10.xlsx",
    "visible": true,
    "width": 94.58854285399343,
    "x0": 529.5231622452718,
    "y0": 819.3782501031765,
    "z0": 2,
  },
]
`;

exports[`treeMapGenerator create Treemap nodes create map with fixed root children which include fixed folders on the one hand and a file at the other 1`] = `
[
  {
    "attributes": {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": 0,
    "incomingEdgePoint": Vector3 {
      "x": -200,
      "y": 2,
      "z": -225,
    },
    "isLeaf": false,
    "length": 771.5290039756343,
    "link": undefined,
    "markingColor": undefined,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": -200,
      "y": 2,
      "z": -175,
    },
    "path": "/root",
    "visible": true,
    "width": 771.5290039756343,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
  {
    "attributes": {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -18.541298807309715,
      "y": 2,
      "z": -57.117749006091444,
    },
    "isLeaf": false,
    "length": 462.9174023853805,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_1_red",
    "outgoingEdgePoint": Vector3 {
      "x": -18.541298807309715,
      "y": 2,
      "z": 174.34095218659883,
    },
    "path": "/root/folder_1_red",
    "visible": true,
    "width": 308.6116015902537,
    "x0": 77.15290039756343,
    "y0": 77.15290039756343,
    "z0": 0,
  },
  {
    "attributes": {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -80.26361912536046,
      "y": 2,
      "z": -10.826008767553404,
    },
    "isLeaf": false,
    "length": 231.45870119269023,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_1.1_red",
    "outgoingEdgePoint": Vector3 {
      "x": 43.18102151074103,
      "y": 2,
      "z": -10.826008767553404,
    },
    "path": "/root/folder_1_red/folder_1.1_red",
    "visible": true,
    "width": 246.889281272203,
    "x0": 108.0140605565888,
    "y0": 123.44464063610148,
    "z0": 0,
  },
  {
    "attributes": {
      "rloc": 12,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -35.64438483940066,
      "y": 502,
      "z": -67.23539716652124,
    },
    "isLeaf": true,
    "length": 225.6375535958713,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "red_child_1.1.file",
    "outgoingEdgePoint": Vector3 {
      "x": -35.64438483940066,
      "y": 502,
      "z": 45.58337963141443,
    },
    "path": "/root/folder_1_red/folder_1.1_red/red_child_1.1.file",
    "visible": true,
    "width": 207.02866895472397,
    "x0": 110.84128068323736,
    "y0": 126.35521443451094,
    "z0": 2,
  },
  {
    "attributes": {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 89.47276174927907,
      "y": 2,
      "z": 162.7680171269643,
    },
    "isLeaf": false,
    "length": 46.29174023853807,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_1.2_red",
    "outgoingEdgePoint": Vector3 {
      "x": 89.47276174927907,
      "y": 2,
      "z": 185.91388724623334,
    },
    "path": "/root/folder_1_red/folder_1.2_red",
    "visible": true,
    "width": 30.861160159025417,
    "x0": 324.04218166976636,
    "y0": 401.1950820673298,
    "z0": 0,
  },
  {
    "attributes": {
      "rloc": 6,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 3,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 87.34334169830635,
      "y": 502,
      "z": 163.04576756839555,
    },
    "isLeaf": true,
    "length": 45.18073847281306,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "red_child_1.2.file",
    "outgoingEdgePoint": Vector3 {
      "x": 87.34334169830635,
      "y": 502,
      "z": 185.63613680480205,
    },
    "path": "/root/folder_1_red/folder_1.2_red/red_child_1.2.file",
    "visible": true,
    "width": 25.861652213263255,
    "x0": 324.4125155916747,
    "y0": 401.75058295019227,
    "z0": 2,
  },
  {
    "attributes": {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -76.40597410548229,
      "y": 2,
      "z": 405.7996533792891,
    },
    "isLeaf": false,
    "length": 77.15290039756337,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_2_orange",
    "outgoingEdgePoint": Vector3 {
      "x": 116.4762768884263,
      "y": 2,
      "z": 405.7996533792891,
    },
    "path": "/root/folder_2_orange",
    "visible": true,
    "width": 385.76450198781714,
    "x0": 77.15290039756343,
    "y0": 617.2232031805074,
    "z0": 0,
  },
  {
    "attributes": {
      "rloc": 10,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -87.63531416621854,
      "y": 502,
      "z": 405.7996533792891,
    },
    "isLeaf": true,
    "length": 75.1667664028273,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "orange.file",
    "outgoingEdgePoint": Vector3 {
      "x": 74.15671333606579,
      "y": 502,
      "z": 405.7996533792891,
    },
    "path": "/root/folder_2_orange7orange.file",
    "visible": true,
    "width": 323.58405500456865,
    "x0": 81.4686720826393,
    "y0": 618.2162701778755,
    "z0": 2,
  },
]
`;

exports[`treeMapGenerator create Treemap nodes only root node 1`] = `
[
  {
    "attributes": {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 48,
      "y": 500,
      "z": -101,
    },
    "isLeaf": true,
    "length": 596,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": 48,
      "y": 500,
      "z": 197,
    },
    "path": "/root",
    "visible": true,
    "width": 596,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
]
`;

exports[`treeMapGenerator create Treemap nodes root node with set fileCount, delta and attribute values from children 1`] = `
[
  {
    "attributes": {
      "avgCommits": 0,
      "functions": 131,
      "mcc": 182,
      "pairingRate": 0,
      "rloc": 820,
      "unary": 5,
    },
    "color": "#666666",
    "deltas": {
      "avgCommits": -146,
      "functions": -989,
      "mcc": -29,
      "pairingRate": -62.5,
      "rloc": 220,
      "unary": 0,
    },
    "depth": 0,
    "edgeAttributes": {
      "avgCommits": {
        "incoming": 3,
        "outgoing": 3,
      },
      "pairingRate": {
        "incoming": 1.5,
        "outgoing": 1,
      },
    },
    "flat": false,
    "height": 2,
    "heightDelta": -145,
    "id": 0,
    "incomingEdgePoint": Vector3 {
      "x": 234.49606293110037,
      "y": 147,
      "z": -7.751968534449816,
    },
    "isLeaf": false,
    "length": 968.9921258622007,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": 234.49606293110037,
      "y": 147,
      "z": 476.74409439665055,
    },
    "path": "/root",
    "visible": true,
    "width": 968.9921258622007,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
  {
    "attributes": {
      "avgCommits": 0,
      "functions": 10,
      "mcc": 1,
      "pairingRate": 0,
      "rloc": 120,
      "unary": 1,
    },
    "color": "#666666",
    "deltas": {
      "avgCommits": -56,
      "functions": 0,
      "mcc": 0,
      "pairingRate": -77,
      "rloc": 20,
      "unary": 0,
    },
    "depth": 1,
    "edgeAttributes": {
      "avgCommits": {
        "incoming": 1,
        "outgoing": 1,
      },
      "pairingRate": {
        "incoming": 1,
        "outgoing": 1,
      },
    },
    "flat": false,
    "height": 495,
    "heightDelta": 0,
    "id": 1,
    "incomingEdgePoint": Vector3 {
      "x": -187.38740242155774,
      "y": 497,
      "z": -83.82086543326045,
    },
    "isLeaf": true,
    "length": 637.863040760918,
    "link": "https://www.google.de",
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "bigLeaf.ts",
    "outgoingEdgePoint": Vector3 {
      "x": -187.38740242155774,
      "y": 497,
      "z": 235.11065494719855,
    },
    "path": "/root/bigLeaf.ts",
    "visible": true,
    "width": 111.79844640386445,
    "x0": 6.713374376510033,
    "y0": 6.713374376510033,
    "z0": 2,
  },
  {
    "attributes": {
      "avgCommits": 0,
      "functions": 121,
      "mcc": 181,
      "pairingRate": 0,
      "rloc": 700,
      "unary": 3,
    },
    "color": "#666666",
    "deltas": {
      "avgCommits": -73,
      "functions": -979,
      "mcc": 71,
      "pairingRate": -62.5,
      "rloc": 600,
      "unary": 0,
    },
    "depth": 1,
    "edgeAttributes": {
      "avgCommits": {
        "incoming": 2,
        "outgoing": 1,
      },
      "pairingRate": {
        "incoming": 2,
        "outgoing": 1,
      },
    },
    "flat": false,
    "height": 2,
    "heightDelta": 355,
    "id": 2,
    "incomingEdgePoint": Vector3 {
      "x": 61.201958615596084,
      "y": 4,
      "z": 75.64489475696905,
    },
    "isLeaf": false,
    "length": 637.863040760918,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "ParentLeaf",
    "outgoingEdgePoint": Vector3 {
      "x": 419.72873677999917,
      "y": 4,
      "z": 75.64489475696905,
    },
    "path": "/root/ParentLeaf",
    "visible": true,
    "width": 717.0535563288062,
    "x0": 131.93856953339454,
    "y0": 6.713374376510033,
    "z0": 2,
  },
  {
    "attributes": {
      "avgCommits": 0,
      "functions": 0,
      "mcc": 0,
      "pairingRate": 0,
      "rloc": 0,
      "unary": 1,
    },
    "color": "#666666",
    "deltas": {
      "avgCommits": -17,
      "functions": -10,
      "mcc": -100,
      "pairingRate": -32,
      "rloc": -400,
      "unary": 0,
    },
    "depth": 1,
    "edgeAttributes": {
      "avgCommits": {
        "incoming": 0,
        "outgoing": 1,
      },
      "pairingRate": {
        "incoming": 0,
        "outgoing": 1,
      },
    },
    "flat": false,
    "height": 500,
    "heightDelta": -500,
    "id": 3,
    "incomingEdgePoint": Vector3 {
      "x": -32.71693775206728,
      "y": 1002,
      "z": 560.1409576880694,
    },
    "isLeaf": true,
    "length": 304.27558759524254,
    "link": "https://www.google.de",
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "sample1OnlyLeaf.scss",
    "outgoingEdgePoint": Vector3 {
      "x": 388.422437990778,
      "y": 1002,
      "z": 560.1409576880694,
    },
    "path": "/root/sample1OnlyLeaf.scss",
    "visible": true,
    "width": 842.2787514856907,
    "x0": 6.713374376510033,
    "y0": 658.0031638904481,
    "z0": 2,
  },
  {
    "attributes": {
      "avgCommits": 0,
      "functions": 101,
      "mcc": 80,
      "pairingRate": 0,
      "rloc": 30,
      "unary": 1,
    },
    "color": "#666666",
    "deltas": {
      "avgCommits": -51,
      "functions": 1,
      "mcc": -20,
      "pairingRate": -60,
      "rloc": 0,
      "unary": 0,
    },
    "depth": 2,
    "edgeAttributes": {
      "avgCommits": {
        "incoming": 2,
        "outgoing": 0,
      },
      "pairingRate": {
        "incoming": 2,
        "outgoing": 0,
      },
    },
    "flat": false,
    "height": 100,
    "heightDelta": -100,
    "id": 4,
    "incomingEdgePoint": Vector3 {
      "x": -68.71322523068314,
      "y": 204,
      "z": -197.72497985485296,
    },
    "isLeaf": true,
    "length": 81.75220106331965,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "smallLeaf.html",
    "outgoingEdgePoint": Vector3 {
      "x": 20.612094767207168,
      "y": 204,
      "z": -197.72497985485296,
    },
    "path": "/root/ParentLeaf/smallLeaf.html",
    "visible": true,
    "width": 178.65063999578064,
    "x0": 136.6241147703717,
    "y0": 11.398919613487207,
    "z0": 4,
  },
  {
    "attributes": {
      "avgCommits": 0,
      "functions": 10,
      "mcc": 100,
      "pairingRate": 0,
      "rloc": 70,
      "unary": 1,
    },
    "color": "#666666",
    "deltas": {
      "avgCommits": -22,
      "functions": -990,
      "mcc": 90,
      "pairingRate": -65,
      "rloc": 0,
      "unary": 0,
    },
    "depth": 2,
    "edgeAttributes": {
      "avgCommits": {
        "incoming": 0,
        "outgoing": 1,
      },
      "pairingRate": {
        "incoming": 0,
        "outgoing": 1,
      },
    },
    "flat": false,
    "height": 0,
    "heightDelta": 450,
    "id": 5,
    "incomingEdgePoint": Vector3 {
      "x": 181.9824153956302,
      "y": 4,
      "z": -197.72497985485296,
    },
    "isLeaf": true,
    "length": 81.75220106331965,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "otherSmallLeaf.ts",
    "outgoingEdgePoint": Vector3 {
      "x": 396.65555570667715,
      "y": 4,
      "z": -197.72497985485296,
    },
    "path": "/root/ParentLeaf/otherSmallLeaf.ts",
    "visible": true,
    "width": 429.3462806220939,
    "x0": 324.6458452401067,
    "y0": 11.398919613487207,
    "z0": 4,
  },
  {
    "attributes": {
      "avgCommits": 0,
      "functions": 10,
      "mcc": 1,
      "pairingRate": 0,
      "rloc": 600,
      "unary": 1,
    },
    "color": "#666666",
    "deltas": {
      "avgCommits": 0,
      "functions": 10,
      "mcc": 1,
      "pairingRate": 0,
      "rloc": 600,
      "unary": 0,
    },
    "depth": 2,
    "edgeAttributes": {},
    "flat": false,
    "height": 495,
    "heightDelta": 5,
    "id": 6,
    "incomingEdgePoint": Vector3 {
      "x": 40.96611754332895,
      "y": 499,
      "z": 121.20654052560604,
    },
    "isLeaf": true,
    "length": 537.3686587496896,
    "link": "https://www.google.de",
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "sample2LeafMergedIn.kt",
    "outgoingEdgePoint": Vector3 {
      "x": 349.65012308924344,
      "y": 499,
      "z": 121.20654052560604,
    },
    "path": "/root/ParentLeaf/sample2LeafMergedIn.kt",
    "visible": true,
    "width": 617.368011091829,
    "x0": 136.6241147703717,
    "y0": 102.52221115076121,
    "z0": 4,
  },
]
`;

exports[`treeMapGenerator create Treemap nodes root node with two direct children 1`] = `
[
  {
    "attributes": {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 143.1384387633061,
      "y": 2,
      "z": -53.430780618346944,
    },
    "isLeaf": false,
    "length": 786.2768775266122,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": 143.1384387633061,
      "y": 2,
      "z": 339.70765814495917,
    },
    "path": "/root",
    "visible": true,
    "width": 786.2768775266122,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
  {
    "attributes": {
      "functions": 10,
      "mcc": 1,
      "rloc": 100,
    },
    "color": "#69AE40",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 495,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 87.50356322074572,
      "y": 497,
      "z": -50.09489034641143,
    },
    "isLeaf": true,
    "length": 772.9333164388702,
    "link": "https://www.google.de",
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "big leaf",
    "outgoingEdgePoint": Vector3 {
      "x": 87.50356322074572,
      "y": 497,
      "z": 336.3717678730237,
    },
    "path": "/root/big leaf",
    "visible": true,
    "width": 661.6635653537494,
    "x0": 6.671780543871024,
    "y0": 6.671780543871024,
    "z0": 2,
  },
  {
    "attributes": {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -77.91232811769163,
      "y": 502,
      "z": 536.2768775266122,
    },
    "isLeaf": true,
    "length": 0,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "Parent Leaf",
    "outgoingEdgePoint": Vector3 {
      "x": 252.91945455918307,
      "y": 502,
      "z": 536.2768775266122,
    },
    "path": "/root/Parent Leaf",
    "visible": true,
    "width": 661.6635653537494,
    "x0": 6.671780543871024,
    "y0": 786.2768775266122,
    "z0": 2,
  },
]
`;

exports[`treeMapGenerator create Treemap nodes root node with two direct children and some grand children 1`] = `
[
  {
    "attributes": {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 225.07550765359252,
      "y": 2,
      "z": -12.462246173203738,
    },
    "isLeaf": false,
    "length": 950.151015307185,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": 225.07550765359252,
      "y": 2,
      "z": 462.6132614803888,
    },
    "path": "/root",
    "visible": true,
    "width": 950.151015307185,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
  {
    "attributes": {
      "functions": 10,
      "mcc": 1,
      "rloc": 100,
    },
    "color": "#69AE40",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 495,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -40.44667149497877,
      "y": 497,
      "z": -8.431096816753808,
    },
    "isLeaf": true,
    "length": 934.0264178813851,
    "link": "https://www.google.de",
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "big leaf",
    "outgoingEdgePoint": Vector3 {
      "x": -40.44667149497877,
      "y": 497,
      "z": 458.58211212393877,
    },
    "path": "/root/big leaf",
    "visible": true,
    "width": 402.9820595842426,
    "x0": 8.062298712899924,
    "y0": 8.062298712899924,
    "z0": 2,
  },
  {
    "attributes": {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 378.6599855150637,
      "y": 4,
      "z": -8.431096816753808,
    },
    "isLeaf": false,
    "length": 934.0264178813851,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "Parent Leaf",
    "outgoingEdgePoint": Vector3 {
      "x": 378.6599855150637,
      "y": 4,
      "z": 458.58211212393877,
    },
    "path": "/root/Parent Leaf",
    "visible": true,
    "width": 402.98205958424256,
    "x0": 427.16895572294237,
    "y0": 8.062298712899924,
    "z0": 2,
  },
  {
    "attributes": {
      "functions": 100,
      "mcc": 100,
      "rloc": 30,
    },
    "color": "#820E0E",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 265.99054065689836,
      "y": 6,
      "z": -101.83373860489232,
    },
    "isLeaf": true,
    "length": 271.70686597160363,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "small leaf",
    "outgoingEdgePoint": Vector3 {
      "x": 435.13265113199856,
      "y": 6,
      "z": -101.83373860489232,
    },
    "path": "/root/Parent Leaf/small leaf",
    "visible": true,
    "width": 338.28422095020034,
    "x0": 431.4194854193483,
    "y0": 12.312828409305865,
    "z0": 4,
  },
  {
    "attributes": {
      "functions": 1000,
      "mcc": 10,
      "rloc": 70,
    },
    "color": "#6caf3e",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 450,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 350.5615958944485,
      "y": 454,
      "z": 203.8501120547608,
    },
    "isLeaf": true,
    "length": 645.3174331241578,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "other small leaf",
    "outgoingEdgePoint": Vector3 {
      "x": 350.5615958944485,
      "y": 454,
      "z": 526.5088286168398,
    },
    "path": "/root/Parent Leaf/other small leaf",
    "visible": true,
    "width": 338.28422095020034,
    "x0": 431.4194854193483,
    "y0": 292.52075377372137,
    "z0": 4,
  },
  {
    "attributes": {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 265.99054065689836,
      "y": 504,
      "z": 692.0887165942851,
    },
    "isLeaf": true,
    "length": 0,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "empty folder",
    "outgoingEdgePoint": Vector3 {
      "x": 435.13265113199856,
      "y": 504,
      "z": 692.0887165942851,
    },
    "path": "/root/Parent Leaf/empty folder",
    "visible": true,
    "width": 338.28422095020034,
    "x0": 431.4194854193483,
    "y0": 942.0887165942851,
    "z0": 4,
  },
]
`;

exports[`treeMapGenerator create Treemap nodes root node with two direct children and some grand children in delta mode 1`] = `
[
  {
    "attributes": {},
    "color": "#666666",
    "deltas": {},
    "depth": 0,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 243.26450198781714,
      "y": 2,
      "z": -3.3677490060914295,
    },
    "isLeaf": false,
    "length": 986.5290039756343,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": 243.26450198781714,
      "y": 2,
      "z": 489.89675298172574,
    },
    "path": "/root",
    "visible": true,
    "width": 986.5290039756343,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
  {
    "attributes": {
      "functions": 10,
      "mcc": 1,
      "rloc": 100,
    },
    "color": "#666666",
    "deltas": {
      "functions": -15,
      "mcc": 12,
      "rloc": 300,
    },
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 495,
    "heightDelta": 60,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -51.71632318193457,
      "y": 497,
      "z": -77.48074042976094,
    },
    "isLeaf": true,
    "length": 666.400342185541,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "big leaf.jpg",
    "outgoingEdgePoint": Vector3 {
      "x": -51.71632318193457,
      "y": 497,
      "z": 255.7194306630096,
    },
    "path": "/root/big leaf.jpg",
    "visible": true,
    "width": 384.72900558842326,
    "x0": 5.919174023853806,
    "y0": 5.919174023853806,
    "z0": 2,
  },
  {
    "attributes": {
      "functions": 20,
      "mcc": 2,
      "rloc": 120,
    },
    "color": "#666666",
    "deltas": {
      "functions": 9,
      "mcc": 33,
      "rloc": -150,
    },
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 490,
    "heightDelta": 165,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 384.5077658178095,
      "y": 492,
      "z": -77.48074042976094,
    },
    "isLeaf": true,
    "length": 666.400342185541,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "another big leaf.java",
    "outgoingEdgePoint": Vector3 {
      "x": 384.5077658178095,
      "y": 492,
      "z": 255.7194306630096,
    },
    "path": "/root/another big leaf.java",
    "visible": true,
    "width": 464.04247631564954,
    "x0": 402.48652765998474,
    "y0": 5.919174023853806,
    "z0": 2,
  },
  {
    "attributes": {
      "functions": 0,
      "mcc": 0,
      "rloc": 0,
    },
    "color": "#666666",
    "deltas": {
      "functions": 0,
      "mcc": 0,
      "rloc": 0,
    },
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -28.928368488201073,
      "y": 502,
      "z": 428.2386902332486,
    },
    "isLeaf": true,
    "length": 0,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "leaf.java with changes",
    "outgoingEdgePoint": Vector3 {
      "x": 401.3765464876891,
      "y": 502,
      "z": 428.2386902332486,
    },
    "path": "/root/leaf.java with changes",
    "visible": true,
    "width": 860.6098299517805,
    "x0": 5.919174023853806,
    "y0": 678.2386902332486,
    "z0": 2,
  },
  {
    "attributes": {},
    "color": "#666666",
    "deltas": {},
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -28.928368488201073,
      "y": 4,
      "z": 582.3838471044414,
    },
    "isLeaf": false,
    "length": 296.45196569467817,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "Parent Leaf",
    "outgoingEdgePoint": Vector3 {
      "x": 401.3765464876891,
      "y": 4,
      "z": 582.3838471044414,
    },
    "path": "/root/Parent Leaf",
    "visible": true,
    "width": 860.6098299517805,
    "x0": 5.919174023853806,
    "y0": 684.1578642571023,
    "z0": 2,
  },
  {
    "attributes": {
      "functions": 100,
      "mcc": 100,
      "rloc": 30,
    },
    "color": "#666666",
    "deltas": {
      "functions": 38,
      "mcc": -40,
      "rloc": -55,
    },
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 0,
    "heightDelta": -200,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -128.71443260026652,
      "y": 204,
      "z": 510.02058529114726,
    },
    "isLeaf": true,
    "length": 289.4530472531767,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "small leaf.jpg",
    "outgoingEdgePoint": Vector3 {
      "x": -128.71443260026652,
      "y": 204,
      "z": 654.7471089177357,
    },
    "path": "/root/Parent Leaf/small leaf.json",
    "visible": true,
    "width": 223.73386831025778,
    "x0": 9.418633244604587,
    "y0": 687.6573234778531,
    "z0": 4,
  },
  {
    "attributes": {
      "functions": 0,
      "mcc": 0,
      "rloc": 0,
    },
    "color": "#666666",
    "deltas": {
      "functions": 0,
      "mcc": 0,
      "rloc": 0,
    },
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 122.99581599118153,
      "y": 504,
      "z": 434.15786425710235,
    },
    "isLeaf": true,
    "length": 0,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "leaf.jpg with changes",
    "outgoingEdgePoint": Vector3 {
      "x": 388.68460798081674,
      "y": 504,
      "z": 434.15786425710235,
    },
    "path": "/root/Parent Leaf/leaf.jpg with changes",
    "visible": true,
    "width": 531.3775839792703,
    "x0": 240.15141999636396,
    "y0": 684.1578642571023,
    "z0": 4,
  },
  {
    "attributes": {
      "functions": 1000,
      "mcc": 10,
      "rloc": 70,
    },
    "color": "#666666",
    "deltas": {
      "functions": -27,
      "mcc": 65,
      "rloc": 200,
    },
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 450,
    "heightDelta": 325,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 122.99581599118153,
      "y": 454,
      "z": 582.3838471044414,
    },
    "isLeaf": true,
    "length": 289.4530472531767,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "other small leaf.json",
    "outgoingEdgePoint": Vector3 {
      "x": 388.68460798081674,
      "y": 454,
      "z": 582.3838471044414,
    },
    "path": "/root/Parent Leaf/other small leaf.json",
    "visible": true,
    "width": 531.3775839792703,
    "x0": 240.15141999636396,
    "y0": 687.6573234778531,
    "z0": 4,
  },
]
`;

exports[`treeMapGenerator create Treemap nodes should build the tree map with valid coordinates using the fixed folder structure 1`] = `
[
  {
    "attributes": {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": 0,
    "incomingEdgePoint": Vector3 {
      "x": -200,
      "y": 2,
      "z": -225,
    },
    "isLeaf": false,
    "length": 929.3250516799595,
    "link": undefined,
    "markingColor": undefined,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": -200,
      "y": 2,
      "z": -175,
    },
    "path": "/root",
    "visible": true,
    "width": 929.3250516799595,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
  {
    "attributes": {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -75.75155281000758,
      "y": 2,
      "z": -133.83436854000507,
    },
    "isLeaf": false,
    "length": 139.39875775199394,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_1",
    "outgoingEdgePoint": Vector3 {
      "x": 179.81283640198131,
      "y": 2,
      "z": -133.83436854000507,
    },
    "path": "/root/folder_1",
    "visible": true,
    "width": 511.1287784239778,
    "x0": 46.46625258399798,
    "y0": 46.46625258399798,
    "z0": 0,
  },
  {
    "attributes": {
      "custom_metric": 2,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -203.53374741600203,
      "y": 502,
      "z": -168.17248372072868,
    },
    "isLeaf": true,
    "length": 137.35246072289448,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "children_1",
    "outgoingEdgePoint": Vector3 {
      "x": -203.53374741600203,
      "y": 502,
      "z": -99.49625335928145,
    },
    "path": "/root/folder_1/children_1",
    "visible": true,
    "width": 0,
    "x0": 46.46625258399798,
    "y0": 47.489401098547695,
    "z0": 2,
  },
  {
    "attributes": {
      "custom_metric": 4,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -203.53374741600203,
      "y": 502,
      "z": -168.17248372072868,
    },
    "isLeaf": true,
    "length": 137.35246072289448,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "children_2",
    "outgoingEdgePoint": Vector3 {
      "x": -203.53374741600203,
      "y": 502,
      "z": -99.49625335928145,
    },
    "path": "/root/folder_1/children_2",
    "visible": true,
    "width": 0,
    "x0": 46.46625258399798,
    "y0": 47.489401098547695,
    "z0": 2,
  },
  {
    "attributes": {
      "custom_metric": 6,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -203.53374741600203,
      "y": 502,
      "z": -168.17248372072868,
    },
    "isLeaf": true,
    "length": 137.35246072289448,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "children_3",
    "outgoingEdgePoint": Vector3 {
      "x": -203.53374741600203,
      "y": 502,
      "z": -99.49625335928145,
    },
    "path": "/root/folder_1/children_3",
    "visible": true,
    "width": 0,
    "x0": 46.46625258399798,
    "y0": 47.489401098547695,
    "z0": 2,
  },
  {
    "attributes": {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -87.36811595600707,
      "y": 2,
      "z": 98.49689437998484,
    },
    "isLeaf": false,
    "length": 464.6625258399798,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_2",
    "outgoingEdgePoint": Vector3 {
      "x": -87.36811595600707,
      "y": 2,
      "z": 330.8281572999747,
    },
    "path": "/root/folder_2",
    "visible": true,
    "width": 232.3312629199899,
    "x0": 46.46625258399798,
    "y0": 232.33126291998988,
    "z0": 0,
  },
  {
    "attributes": {
      "custom_metric": 10,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -203.53374741600203,
      "y": 502,
      "z": 100.39359518705082,
    },
    "isLeaf": true,
    "length": 457.07572261171566,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "children_4",
    "outgoingEdgePoint": Vector3 {
      "x": -203.53374741600203,
      "y": 502,
      "z": 328.93145649290864,
    },
    "path": "/root/folder_2/children_4",
    "visible": true,
    "width": 0,
    "x0": 46.46625258399798,
    "y0": 236.1246645341219,
    "z0": 2,
  },
  {
    "attributes": {
      "custom_metric": 0,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -203.53374741600203,
      "y": 502,
      "z": 100.39359518705082,
    },
    "isLeaf": true,
    "length": 457.07572261171566,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "children_5",
    "outgoingEdgePoint": Vector3 {
      "x": -203.53374741600203,
      "y": 502,
      "z": 328.93145649290864,
    },
    "path": "/root/folder_2/children_5",
    "visible": true,
    "width": 0,
    "x0": 46.46625258399798,
    "y0": 236.1246645341219,
    "z0": 2,
  },
  {
    "attributes": {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 191.4293995479808,
      "y": 2,
      "z": 98.49689437998484,
    },
    "isLeaf": false,
    "length": 464.6625258399798,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_3",
    "outgoingEdgePoint": Vector3 {
      "x": 191.4293995479808,
      "y": 2,
      "z": 330.8281572999747,
    },
    "path": "/root/folder_3",
    "visible": true,
    "width": 232.3312629199899,
    "x0": 325.26376808798585,
    "y0": 232.33126291998988,
    "z0": 0,
  },
  {
    "attributes": {
      "custom_metric": 4,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 75.26376808798585,
      "y": 502,
      "z": 100.39359518705082,
    },
    "isLeaf": true,
    "length": 457.07572261171566,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "children_6",
    "outgoingEdgePoint": Vector3 {
      "x": 75.26376808798585,
      "y": 502,
      "z": 328.93145649290864,
    },
    "path": "/root/folder_3/children_6",
    "visible": true,
    "width": 0,
    "x0": 325.26376808798585,
    "y0": 236.1246645341219,
    "z0": 2,
  },
  {
    "attributes": {
      "custom_metric": 0,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 75.26376808798585,
      "y": 502,
      "z": 100.39359518705082,
    },
    "isLeaf": true,
    "length": 457.07572261171566,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "children_7",
    "outgoingEdgePoint": Vector3 {
      "x": 75.26376808798585,
      "y": 502,
      "z": 328.93145649290864,
    },
    "path": "/root/folder_3/children_7",
    "visible": true,
    "width": 0,
    "x0": 325.26376808798585,
    "y0": 236.1246645341219,
    "z0": 2,
  },
  {
    "attributes": {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 400.5275361759717,
      "y": 2,
      "z": 5.564389211988868,
    },
    "isLeaf": false,
    "length": 836.3925465119636,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_4",
    "outgoingEdgePoint": Vector3 {
      "x": 400.5275361759717,
      "y": 2,
      "z": 423.76066246797063,
    },
    "path": "/root/folder_4",
    "visible": true,
    "width": 92.93250516799594,
    "x0": 604.0612835919737,
    "y0": 46.46625258399798,
    "z0": 0,
  },
  {
    "attributes": {
      "custom_metric": 20,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 354.06128359197373,
      "y": 502,
      "z": 8.713163426241039,
    },
    "isLeaf": true,
    "length": 823.7974496549551,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "children_8",
    "outgoingEdgePoint": Vector3 {
      "x": 354.06128359197373,
      "y": 502,
      "z": 420.61188825371863,
    },
    "path": "/root/folder_4/children_8",
    "visible": true,
    "width": 0,
    "x0": 604.0612835919737,
    "y0": 52.76380101250225,
    "z0": 2,
  },
  {
    "attributes": {
      "custom_metric": 5,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 354.06128359197373,
      "y": 502,
      "z": 8.713163426241039,
    },
    "isLeaf": true,
    "length": 823.7974496549551,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "children_9",
    "outgoingEdgePoint": Vector3 {
      "x": 354.06128359197373,
      "y": 502,
      "z": 420.61188825371863,
    },
    "path": "/root/folder_4/children_9",
    "visible": true,
    "width": 0,
    "x0": 604.0612835919737,
    "y0": 52.76380101250225,
    "z0": 2,
  },
  {
    "attributes": {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 563.1594202199647,
      "y": 2,
      "z": 5.564389211988868,
    },
    "isLeaf": false,
    "length": 836.3925465119636,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_5",
    "outgoingEdgePoint": Vector3 {
      "x": 563.1594202199647,
      "y": 2,
      "z": 423.76066246797063,
    },
    "path": "/root/folder_5",
    "visible": true,
    "width": 139.3987577519939,
    "x0": 743.4600413439676,
    "y0": 46.46625258399798,
    "z0": 0,
  },
  {
    "attributes": {
      "custom_metric": 10,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 493.46004134396765,
      "y": 502,
      "z": 8.739621788495896,
    },
    "isLeaf": true,
    "length": 823.6916162059356,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "children_10",
    "outgoingEdgePoint": Vector3 {
      "x": 493.46004134396765,
      "y": 502,
      "z": 420.5854298914637,
    },
    "path": "/root/folder_5/children_10",
    "visible": true,
    "width": 0,
    "x0": 743.4600413439676,
    "y0": 52.81671773701199,
    "z0": 2,
  },
  {
    "attributes": {
      "custom_metric": 0,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 493.46004134396765,
      "y": 502,
      "z": 8.739621788495896,
    },
    "isLeaf": true,
    "length": 823.6916162059356,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "children_11",
    "outgoingEdgePoint": Vector3 {
      "x": 493.46004134396765,
      "y": 502,
      "z": 420.5854298914637,
    },
    "path": "/root/folder_5/children_11",
    "visible": true,
    "width": 0,
    "x0": 743.4600413439676,
    "y0": 52.81671773701199,
    "z0": 2,
  },
  {
    "attributes": {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -75.75155281000761,
      "y": 2,
      "z": 563.1594202199647,
    },
    "isLeaf": false,
    "length": 139.3987577519939,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "folder_6",
    "outgoingEdgePoint": Vector3 {
      "x": 179.81283640198126,
      "y": 2,
      "z": 563.1594202199647,
    },
    "path": "/root/folder_6",
    "visible": true,
    "width": 511.1287784239777,
    "x0": 46.46625258399798,
    "y0": 743.4600413439676,
    "z0": 0,
  },
  {
    "attributes": {
      "custom_metric": 1,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -203.53374741600203,
      "y": 502,
      "z": 528.9391872312846,
    },
    "isLeaf": true,
    "length": 136.88093195472004,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "children_12",
    "outgoingEdgePoint": Vector3 {
      "x": -203.53374741600203,
      "y": 502,
      "z": 597.3796532086446,
    },
    "path": "/root/folder_6/children_12",
    "visible": true,
    "width": 0,
    "x0": 46.46625258399798,
    "y0": 744.7189542426046,
    "z0": 2,
  },
  {
    "attributes": {
      "custom_metric": 1,
    },
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -203.53374741600203,
      "y": 502,
      "z": 528.9391872312846,
    },
    "isLeaf": true,
    "length": 136.88093195472004,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "children_13",
    "outgoingEdgePoint": Vector3 {
      "x": -203.53374741600203,
      "y": 502,
      "z": 597.3796532086446,
    },
    "path": "/root/folder_6/children_13",
    "visible": true,
    "width": 0,
    "x0": 46.46625258399798,
    "y0": 744.7189542426046,
    "z0": 2,
  },
]
`;

exports[`treeMapGenerator create Treemap nodes should disable floor labels if option is toggled and change size 1`] = `
[
  {
    "attributes": {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 0,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 117.57550765359252,
      "y": 2,
      "z": -66.21224617320374,
    },
    "isLeaf": false,
    "length": 735.151015307185,
    "link": undefined,
    "mapNodeDepth": 0,
    "markingColor": undefined,
    "name": "root",
    "outgoingEdgePoint": Vector3 {
      "x": 117.57550765359252,
      "y": 2,
      "z": 301.3632614803888,
    },
    "path": "/root",
    "visible": true,
    "width": 735.151015307185,
    "x0": 0,
    "y0": 0,
    "z0": 0,
  },
  {
    "attributes": {
      "functions": 10,
      "mcc": 1,
      "rloc": 100,
    },
    "color": "#69AE40",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 495,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -63.09326456448443,
      "y": 497,
      "z": -66.21224617320374,
    },
    "isLeaf": true,
    "length": 355.0995812187153,
    "link": "https://www.google.de",
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "big leaf",
    "outgoingEdgePoint": Vector3 {
      "x": 298.2442798716695,
      "y": 497,
      "z": -66.21224617320374,
    },
    "path": "/root/big leaf",
    "visible": true,
    "width": 722.6750888723078,
    "x0": 6.23796321743863,
    "y0": 6.23796321743863,
    "z0": 2,
  },
  {
    "attributes": {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 1,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -63.09326456448443,
      "y": 4,
      "z": 301.3632614803888,
    },
    "isLeaf": false,
    "length": 355.0995812187153,
    "link": undefined,
    "mapNodeDepth": 1,
    "markingColor": undefined,
    "name": "Parent Leaf",
    "outgoingEdgePoint": Vector3 {
      "x": 298.2442798716695,
      "y": 4,
      "z": 301.3632614803888,
    },
    "path": "/root/Parent Leaf",
    "visible": true,
    "width": 722.6750888723078,
    "x0": 6.23796321743863,
    "y0": 373.81347087103114,
    "z0": 2,
  },
  {
    "attributes": {
      "functions": 100,
      "mcc": 100,
      "rloc": 30,
    },
    "color": "#820E0E",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 2,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": -135.3607734517152,
      "y": 6,
      "z": 214.34320504494815,
    },
    "isLeaf": true,
    "length": 348.08022574176266,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "small leaf",
    "outgoingEdgePoint": Vector3 {
      "x": -135.3607734517152,
      "y": 6,
      "z": 388.3833179158295,
    },
    "path": "/root/Parent Leaf/small leaf",
    "visible": true,
    "width": 209.78317118473973,
    "x0": 9.747640955914944,
    "y0": 377.3231486095075,
    "z0": 4,
  },
  {
    "attributes": {
      "functions": 1000,
      "mcc": 10,
      "rloc": 70,
    },
    "color": "#6caf3e",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 450,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 101.26346930102301,
      "y": 454,
      "z": 301.3632614803888,
    },
    "isLeaf": true,
    "length": 348.08022574176266,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "other small leaf",
    "outgoingEdgePoint": Vector3 {
      "x": 350.69007266785445,
      "y": 454,
      "z": 301.3632614803888,
    },
    "path": "/root/Parent Leaf/other small leaf",
    "visible": true,
    "width": 498.8532067336629,
    "x0": 226.5501676176073,
    "y0": 377.3231486095075,
    "z0": 4,
  },
  {
    "attributes": {},
    "color": "#666666",
    "deltas": undefined,
    "depth": 2,
    "edgeAttributes": undefined,
    "flat": false,
    "height": 500,
    "heightDelta": 0,
    "id": undefined,
    "incomingEdgePoint": Vector3 {
      "x": 478.91305208974643,
      "y": 504,
      "z": 214.34320504494815,
    },
    "isLeaf": true,
    "length": 348.08022574176266,
    "link": undefined,
    "mapNodeDepth": 2,
    "markingColor": undefined,
    "name": "empty folder",
    "outgoingEdgePoint": Vector3 {
      "x": 478.91305208974643,
      "y": 504,
      "z": 388.3833179158295,
    },
    "path": "/root/Parent Leaf/empty folder",
    "visible": true,
    "width": 0,
    "x0": 728.9130520897464,
    "y0": 377.3231486095075,
    "z0": 4,
  },
]
`;
